// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A renders a correct snapshot 1`] = `
<a
  className="c-text-main tdu hov-c-primary-main "
  href="https://maasu.org"
  rel="noreferrer noopener"
  target="_blank"
>
  test text
</a>
`;

exports[`Link renders a correct snapshot 1`] = `
<a
  className="c-text-main tdu hov-c-primary-main "
  href="/contact"
  onClick={[Function]}
>
  test text
</a>
`;
